--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Aqui va la agneda de Alex!!</h1>
+    <h1>Aqui va la agenda de Alex!!</h1>
     <h3>Vamos !!!</h3>
 </body>
 </html>
